[package]
authors = [ 'Aaron Gallagher <_@habnab.it>', 'Connie Hilarides <connorcpu@live.com>', 'Denis K. <denis.k@tonlabs.io>', 'Alexey Vavilin <alexey.v@tonlabs.io' ]
description = 'Minimal wrappers for TON serialization using TL-schema'
edition = '2018'
name = 'ton_api'
version = '0.2.121'

[build-dependencies]
failure = '0.1.7'
serde_json = '1.0.52'
ton_tl_codegen = { path = '../ton_tl_codegen' }

[dependencies]
byteorder = '1.4'
extfmt = '0.1'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4'
ordered-float = '2.8'
secstr = '0.4'
serde = '1.0'
serde_derive = '1.0'
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block', tag = '1.7.43' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types', tag = '1.10.14' }

[dev-dependencies]
base64 = '0.13'
