[package]
authors = [ 'Aaron Gallagher <_@habnab.it>', 'Connie Hilarides <connorcpu@live.com>', 'Denis K. <denis.k@everx-labs.io>', 'Alexey Vavilin <alexey.v@tonlabs.io' ]
description = 'Minimal wrappers for TON serialization using TL-schema'
edition = '2021'
name = 'ton_api'
version = '0.4.10'

[dependencies]
anyhow = '1.0'
byteorder = '1.4'
extfmt = '0.1'
hex = '0.4'
lazy_static = '1.4'
ordered-float = '2.8'
secstr = '0.4'
serde = '1.0'
serde_derive = '1.0'
thiserror = '1.0'
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.7' }

[build-dependencies]
serde_json = '1.0.52'
ton_tl_codegen = { path = '../ton_tl_codegen' }

