[package]
authors = [ 'Aaron Gallagher <_@habnab.it>', 'Connie Hilarides <connorcpu@live.com>', 'Denis K. <denis.k@everx-labs.io>', 'Alexey Vavilin <alexey.v@tonlabs.io' ]
description = 'Code generator for TL-schema'
edition = '2021'
name = 'ton_tl_codegen'
version = '0.1.0'

[dependencies]
crc = '1.8'
failure = '0.1'
pom = '1.1'
proc-macro2 = '1.0'
quote = '1.0'
serde = '1.0'
serde_derive = '1.0'
syn = '1.0'

[features]
default = [ 'reformat' ]
reformat = [  ]

